[gd_scene load_steps=15 format=3 uid="uid://b2kv0qfwyfiaj"]

[ext_resource type="Texture2D" uid="uid://djaj1vr4sl6pg" path="res://assets/enemy_saucer.png" id="1_7k104"]
[ext_resource type="Script" uid="uid://ubh53qiftr4x" path="res://enemy.gd" id="1_iifgy"]
[ext_resource type="PackedScene" uid="uid://djbbtg2r4uqsa" path="res://enemy_paths.tscn" id="2_4gyqm"]
[ext_resource type="PackedScene" uid="uid://8epccmm4y8wx" path="res://enemyBullet.tscn" id="2_epg4t"]
[ext_resource type="PackedScene" uid="uid://bsu40xmlig54p" path="res://explosion.tscn" id="3_qi2p4"]
[ext_resource type="AudioStream" uid="uid://b5kdbukcp12qy" path="res://assets/sounds/explosion.wav" id="6_wujgv"]
[ext_resource type="AudioStream" uid="uid://dv8v7eb22twg2" path="res://assets/sounds/enemy_laser.wav" id="7_hb8ge"]
[ext_resource type="Texture2D" uid="uid://pm0ch3ps53u4" path="res://assets/corona.png" id="8_hb8ge"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7k104"]
radius = 32.0

[sub_resource type="Animation" id="Animation_qi2p4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_4gyqm"]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qi2p4"]
_data = {
&"RESET": SubResource("Animation_qi2p4"),
&"flash": SubResource("Animation_4gyqm")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hb8ge"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_hb8ge"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.202247), 0.0, 0.0, 0, 0]
point_count = 2

[node name="enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_iifgy")
bulletScene = ExtResource("2_epg4t")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("1_7k104")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7k104")

[node name="EnemyPaths" parent="." instance=ExtResource("2_4gyqm")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qi2p4")
}

[node name="Explosion" parent="." instance=ExtResource("3_qi2p4")]
visible = false

[node name="GunCoolDown" type="Timer" parent="." groups=["enemies"]]
wait_time = 1.5
autostart = true

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wujgv")
volume_db = -10.0

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_hb8ge")
volume_db = -10.0

[node name="Trail" type="CPUParticles2D" parent="."]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_hb8ge")
amount = 20
texture = ExtResource("8_hb8ge")
emission_shape = 1
emission_sphere_radius = 25.0
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_hb8ge")

[connection signal="body_entered" from="." to="." method="onEnemyBodyEntered"]
[connection signal="timeout" from="GunCoolDown" to="." method="onGunCoolDownTimerTimeout"]
